--- a/index.html
+++ b/index.html
@@ -54,12 +54,10 @@
 
                 <p id="info" data-i18n="about.info">
                     Graduado en Ciberseguridad en Entornos de la Tecnología de la Información con el interés de poder
-                    desarrollar mi carrera carrera profesional en el desarrollo de software y la ciberseguridad.
-                    <br><br>
-                    Busco mi primera experiencia laboral como desarrollador, actualmente las tecnologías en las que
-                    tengo
-                    mayor nivel son Python, Django, React y MySQL aunque estoy abierto a formarme en otros stacks
-                    tecnológicos.
+                    desarrollar mi carrera carrera profesional en el desarrollo de software y la ciberseguridad.<br><br>
+                    Cuento con sólidos conocimientos en Python y experiencia con tecnologías como Django, Pandas,
+                    PySpark, React,entre otras. <br><br> He participado en el desarrollo de aplicaciones web, APIs
+                    REST,procesos ETL, herramientas de web scraping y soluciones orientadas a la ciberseguridad.
                 </p>
                 <p id="cv">
                     <a href="assets/docs/CV - David Sánchez Albarrán.pdf" target="_blank" download>
