--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="child">
                     <p class="experience-name" data-i18n="experience.name-2">Maintenance Technician (FCT)</p>
                     <p class="experience-company" data-i18n="experience.company-2">Peñaranda de Bracamonte Town Hall</p>
-                    <p class="experience-date">[ Apr 2019 - Jun 2021 ]</p>
+                    <p class="experience-date">[ Abr 2021 - Jun 2021 ]</p>
                     <p class="experience-info" data-i18n="experience.info-2">
                         Peñaranda de Bracamonte, Salamanca | Spain
                         <br><br>
